# ibgedatadownloader

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  HelpDialog.py  MyHTMLParser.py  MyProgressDialog.py  README.html  README.md  WorkerDownloadManager.py  WorkerSearchManager.py  __init__.py  ibgeDataDownloader.py  ibgeDataDownloader_dialog.py  ibgeDataDownloader_dialog_base - Copia.ui  ibgeDataDownloader_dialog_base.ui  metadata.txt  pb_tool.cfg  pyproject.toml  resources.py  resources.qrc  setup.cfg  teste.py  testeProgress.py  teste_construçãoDOM.py
.github/: dependabot.yml  labeler.yml
.github/workflows/: format.yml  label.yml  release.yml
i18n/: ibgeDataDownloader.pro  ibgeDataDownloader_pt.qm  ibgeDataDownloader_pt.ts
ibgedatadownloader/: HelpDialog.py  Makefile  MyHTMLParser.py  MyProgressDialog.py  README.html  README.txt  WorkerDownloadManager.py  WorkerSearchManager.py  __about__.py  __init__.py  ibgeDataDownloader.py  ibgeDataDownloader_dialog.py  metadata.txt  pb_tool.cfg  plugin_upload.py  resources.bat  resources.py  resources_rc.py  teste_construcaoDOM.py
ibgedatadownloader/help/source/: conf.py  index.rst
ibgedatadownloader/i18n/: ibgeDataDownloader.bat  ibgeDataDownloader.pro
ibgedatadownloader/pluginHelp/en/: about.html  home.html  search.html
ibgedatadownloader/pluginHelp/pt/: about.html  home.html  search.html
ibgedatadownloader/test/: test_ibgeDataDownloader_dialog.py  test_init.py  test_resources.py  test_translations.py
pluginHelp/: inicio.html  pesquisa.html  sobre.html
pluginHelp/en/: about.html
pluginHelp/pt/: home.html  search.html
requirements/: development.txt  packaging.txt
scripts/: atualiza_metadata.py  deploy_qgis.bat
test/: test_ibgeDataDownloader_dialog.py
